--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "next": "^15.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-signature-canvas": "^1.0.7"
+    "react-signature-canvas": "^1.0.7",
+    "react-toastify": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "latest",
