--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "^15.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.5",
     "react-signature-canvas": "^1.0.7",
     "react-toastify": "^11.0.3"
   },
