--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
+    "lodash.debounce": "^4.0.8",
     "next": "^15.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -31,6 +32,7 @@
     "react-toastify": "^11.0.3"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "latest",
     "@types/react": "^19.0.0",
     "@types/react-signature-canvas": "^1.0.6",
