--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material-nextjs": "latest",
     "axios": "^1.7.9",
     "clsx": "latest",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.17.1",
     "jwt-decode": "^4.0.0",
     "lodash.debounce": "^4.0.8",
