--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.15.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@mui/material-nextjs": "latest",
     "axios": "^1.7.9",
     "clsx": "latest",
     "date-fns": "^4.1.0",
