--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "@mui/material-nextjs": "latest",
+    "@mui/x-date-pickers": "^7.28.3",
     "axios": "^1.7.9",
     "clsx": "latest",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "framer-motion": "^11.17.1",
     "jwt-decode": "^4.0.0",
     "lodash.debounce": "^4.0.8",
