--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "@mui/material-nextjs": "latest",
-    "@mui/x-date-pickers": "^8.5.2",
+    "@mui/x-date-pickers": "latest",
     "axios": "^1.7.9",
     "clsx": "latest",
-    "date-fns": "^4.1.0",
+    "date-fns": "latest",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.17.1",
     "jwt-decode": "^4.0.0",
@@ -30,7 +30,6 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
-    "react-material-ui-carousel": "^3.4.2",
     "react-signature-canvas": "^1.0.7",
     "react-toastify": "^11.0.3",
     "react-window": "^1.8.11"
