fixing image popup and carousel

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "latest",
     "@emotion/server": "latest",
     "@emotion/styled": "latest",
+    "@hello-pangea/dnd": "^18.0.1",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "@mui/material-nextjs": "latest",
@@ -27,7 +28,6 @@
     "lodash.debounce": "^4.0.8",
     "next": "^15.0.0",
     "react": "^18.0.0",
-    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.0.0",
     "react-dropzone": "^14.3.5",
     "react-signature-canvas": "^1.0.7",
@@ -38,7 +38,6 @@
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "latest",
     "@types/react": "^19.0.0",
-    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-signature-canvas": "^1.0.6",
     "@types/react-window": "^1.8.8",
     "eslint": "latest",
