--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-dropzone": "^14.3.5",
     "react-signature-canvas": "^1.0.7",
     "react-toastify": "^11.0.3",
-    "react-window": "^1.8.11"
+    "react-window": "^1.8.11",
+    "recharts": "^3.5.0"
   },
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.9",
