--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.7.9",
     "clsx": "latest",
     "date-fns": "latest",
+    "date-fns-tz": "^3.2.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.17.1",
     "jwt-decode": "^4.0.0",
