--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-dropzone": "^14.3.5",
+    "react-quill": "2.0.0",
     "react-signature-canvas": "^1.0.7",
     "react-toastify": "^11.0.3",
     "react-window": "^1.8.11",
